syntax = "proto3";
import "google/api/annotations.proto";
import "Dto/accommodation.proto";
option csharp_namespace = "JetSetGo.AccommodationManagement.Grpc";
package routes;

service AccommodationApp {
  rpc GetAccommodationList(GetAccommodationListRequest) returns (GetAccommodationListResponse){
    option (google.api.http) = {
      get: "/api/v1/accommodations"
    };
  }
  rpc CreateAccommodation(CreateAccommodationRequest) returns (CreateAccommodationResponse){
    option (google.api.http) = {
      post: "/api/v1/accommodations",
      body: "accommodation"
    };
  }
  rpc GetAccommodation(GetAccommodationRequest) returns (GetAccommodationResponse){
    option (google.api.http) = {
      get: "/api/v1/accommodations/{id}"
    };
  }
  rpc GetAccommodationByHost(GetAccommodationsByHostRequest) returns (GetAccommodationsByHostResponse){
    option (google.api.http) = {
      get: "/api/v1/accommodations/host/{hostId}"
    };
  }
}